fix: alignment of pencil in goals dropdown

--- a/src/pages/GoalsPage/GoalsPage.scss
+++ b/src/pages/GoalsPage/GoalsPage.scss
@@ -111,13 +111,13 @@
   flex-direction: column;
   justify-content: flex-start;
   gap: 6px;
-  line-height: 31px;
 }
 
 .goal-title {
   white-space: nowrap;
   overflow-x: scroll;
   scrollbar-width: none;
+  line-height: 31px;
 }
 .goal-title::-webkit-scrollbar {
   display: none;
@@ -127,7 +127,6 @@
   white-space: pre-line;
   font-size: 0.875em;
   font-weight: 300;
-  margin-top: 7px !important;
 }
 
 .goal-link {
